--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@it.specialist/my-package",
+  "name": "@it.specialist/multi-functional-tools",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
